<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_account_balance_wallet"
            android:title="@string/balances" />
        <item
            android:id="@+id/nav_add_gasto"
            android:icon="@drawable/ic_remove_circle_outline"
            android:title="@string/add_gasto" />
        <item
            android:id="@+id/nav_add_ingreso"
            android:icon="@drawable/ic_add_circle_outline"
            android:title="@string/add_ingreso" />
        <item
            android:id="@+id/nav_movimientos"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/movimientos" />
        <item
            android:id="@+id/nav_filtrar_categorias"
            android:icon="@drawable/ic_filter_list"
            android:title="@string/filtrar_categorias" />
        <item
            android:id="@+id/nav_editar_categorias"
            android:icon="@drawable/ic_edit"
            android:title="@string/editar_categorias" />
    </group>


</menu>
