<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditarMovimientoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="48dp"
        android:paddingRight="48dp"
        android:paddingTop="16dp">

        <EditText
            android:id="@+id/m_edtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:inputType="text"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/m_edtMonto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/monto"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_edtTitulo" />

        <EditText
            android:id="@+id/m_edtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripcion"
            android:inputType="textMultiLine"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_edtMonto" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/categoria"
            android:paddingTop="5dp"
            android:paddingLeft="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtDescripcion"/>

        <Spinner
            android:id="@+id/m_spinnerCategoria"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_edtDescripcion" />

        <Switch
            android:id="@+id/m_switchMovimientoFijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            android:layout_marginRight="102dp"
            android:paddingBottom="8dp"
            android:paddingTop="16dp"
            android:text=""
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_spinnerCategoria" />

        <EditText
            android:id="@+id/m_edtFechaSingle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="55dp"
            android:layout_marginRight="55dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/seleccionarFecha"
            android:inputType="none"
            android:longClickable="false"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_switchMovimientoFijo" />

        <Spinner
            android:id="@+id/m_spinnerFrecuencia"
            style="@android:style/Widget.Holo.Light.Spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_switchMovimientoFijo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:paddingBottom="8dp">


            <EditText
                android:id="@+id/m_edtFechaInicio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/desde"
                android:inputType="none"
                android:longClickable="false"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/m_spinnerFrecuencia" />

            <EditText
                android:id="@+id/m_edtFechaFin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/hasta"
                android:inputType="none"
                android:longClickable="false"
                android:textAlignment="center"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/m_spinnerFrecuencia" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/m_chkRecordatorio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recordatorio"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_edtFechaInicio"/>

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/m_imageView"
            android:layout_gravity="center_horizontal"
            android:layout_width="165dp"
            android:layout_height="165dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_photo_camera_black_24dp"

            app:civ_border_color="@color/colorPrimaryDark"
            app:civ_border_width="2dp"
            app:civ_shadow="false"
            app:civ_shadow_radius="0"
            app:civ_shadow_color="@color/round_corner_progress_bar_progress_default" />

        <Button
            android:id="@+id/m_btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="86dp"
            android:layout_marginRight="86dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/guardar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/m_chkRecordatorio" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
</ScrollView>