<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edtCategoriaNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:digits="abcdefghijklmnñopqrstuvwxyz ABCDEFGHIJKLMNÑOPQRSTUVWXYZ"
        android:hint="@string/categoria_nombre"
        android:padding="20dp"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtCategoriaNombre"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/ingreso"
                android:textSize="16sp" />

            <Switch
                android:id="@+id/switchNuevaCategoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:thumbTint="@color/colorPrimary"
                android:trackTint="@color/rowBorders" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/gasto"
                android:textSize="16sp" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="Seleccione un color para la categoría"
            android:textAlignment="center"
            android:textSize="14sp" />

        <SeekBar
            android:id="@+id/seekbar_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:max="100"
            android:maxHeight="50dp"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:progress="50"></SeekBar>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            android:elevation="10dp">

            <ImageView
                android:id="@+id/seekbar_color"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:scaleType="centerCrop"/>

        </android.support.v7.widget.CardView>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/btnCancelarCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/cancelar" />

        <Button
            android:id="@+id/btnGuardarCategoria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/guardar" />

    </RelativeLayout>

</LinearLayout>